--- a/package.json
+++ b/package.json
@@ -82,6 +82,11 @@
     "prettier": "^2.7.1",
     "sort-package-json": "^1.57.0",
     "start-server-and-test": "^1.14.0",
+    "stylelint": "^16.11.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-order": "^5.0.0",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4",
     "vite": "^2.9.12"
