--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     }
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.87.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.2",
@@ -82,10 +84,10 @@
     "prettier": "^2.7.1",
     "sort-package-json": "^1.57.0",
     "start-server-and-test": "^1.14.0",
-    "stylelint": "^16.11.0",
+    "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^26.0.0",
-    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-order": "^5.0.0",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4",
